--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 ansible = "^7.1.0"
-
+docker = "^6.0.1"
 
 [tool.poetry.dev-dependencies]
 molecule = "^4.0.4"
