--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ ansible = "^7.1.0"
 docker = "^6.0.1"
 
 [tool.poetry.dev-dependencies]
+ansible-lint = "5.4.0"
 molecule = "^4.0.4"
 [build-system]
 requires = ["poetry-core"]
