--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ docker = "^6.0.1"
 [tool.poetry.dev-dependencies]
 ansible-lint = "5.4.0"
 molecule = "^4.0.4"
+pre-commit = "^2.20.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
