feat(playbooks): only restart containers with docker-compose that have changed

--- a/playbooks/applications/kimai.yml
+++ b/playbooks/applications/kimai.yml
@@ -17,7 +17,7 @@
     owner: root
     group: docker
     mode: '0644'
-  notify: Restart kimai
+  notify: Update kimai
   tags:
     - application
     - kimai
