feat: add host configuration block

--- a/playbooks/run.yml
+++ b/playbooks/run.yml
@@ -10,6 +10,11 @@
         - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
         - "{{ ansible_distribution }}.yml"
 
+    - name: Include host configuration
+      ansible.builtin.include_tasks: features/host_config.yml
+      tags:
+        - host
+
     - name: Include default toolchain
       ansible.builtin.include_tasks: features/default_toolchain.yml
 
