fix: make ansible_managed statement idempotent

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-ansible_managed = Ansible: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
+ansible_managed = Ansible: {file} modified on %Y-%m-%d %H:%M:%S
 callbacks_enabled = profile_tasks
 vault_password_file = ~/.ansible/chronicc-vault-pass
 
