--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 ansible_managed = Ansible: {file} modified on %Y-%m-%d %H:%M:%S
-callbacks_enabled = profile_tasks
+callbacks_enabled = timer, profile_tasks, profile_roles
 vault_password_file = ~/.ansible/chronicc-vault-pass
 
 [ssh_connection]
