fix: normalize prefix of all task names

--- a/playbooks/applications/kimai.yml
+++ b/playbooks/applications/kimai.yml
@@ -21,7 +21,7 @@
     - application
     - kimai
 
-- name: Update kimai
+- name: kimai // Update deployment
   community.docker.docker_compose:
     project_src: "{{ f_docker__home }}/kimai"
   tags:
