fix(playbooks): don't set hostname if not specified

--- a/playbooks/features/host_config.yml
+++ b/playbooks/features/host_config.yml
@@ -2,5 +2,7 @@
 - name: host config // Set hostname
   ansible.builtin.hostname:
     name: '{{ hostname }}'
+  when:
+    - hostname | default(false)
   tags:
     - host
