--- a/playbooks/features/default_toolchain.yml
+++ b/playbooks/features/default_toolchain.yml
@@ -20,11 +20,17 @@
   changed_when: false
   when: ansible_pkg_mgr == "yum"
 
-- name: default toolchain // Install default python packages
+- name: default toolchain // Install default python packages (package manager)
   ansible.builtin.package:
     name: '{{ item }}'
     state: present
   loop: '{{ python_packages }}'
+
+- name: default toolchain // Install default python packages (pip)
+  ansible.builtin.pip:
+    name: '{{ item }}'
+    state: present
+  loop: '{{ python_pip_packages }}'
 
 - name: default toolchain // Install default packages
   ansible.builtin.package:
