feat(playbooks): ensure an ansible cache directory exists on the target node

--- a/playbooks/features/host_config.yml
+++ b/playbooks/features/host_config.yml
@@ -6,3 +6,11 @@
     - hostname | default(false)
   tags:
     - host
+
+- name: host config // Ensure ansible cache directory exists
+  ansible.builtin.file:
+    path: /var/cache/ansible
+    state: directory
+  tags:
+    - host
+
