--- a/playbooks/base_installation.yml
+++ b/playbooks/base_installation.yml
@@ -19,3 +19,9 @@
 
     - name: Include default toolchain
       ansible.builtin.include_tasks: features/default_toolchain.yml
+
+    - name: Include host git packages
+      ansible.builtin.include_tasks: features/host_git_packages.yml
+      loop: '{{ h_git_packages | default([]) }}'
+      tags:
+        - host
