chore: add hadoop test machines

--- a/.envrc
+++ b/.envrc
@@ -7,6 +7,7 @@ export AW_CENTOS_7_BOX_IMAGE=generic/centos7
 export AW_CENTOS_7_HOSTNAME=centos-7
 export AW_CENTOS_8_BOX_IMAGE=generic/centos8
 export AW_CENTOS_8_HOSTNAME=centos-8
+export AW_HADOOP_BOX_IMAGE=generic/ubuntu2204
 export AW_UBUNTU_1804_BOX_IMAGE=generic/ubuntu1804
 export AW_UBUNTU_1804_HOSTNAME=ubuntu-1804
 export AW_UBUNTU_2004_BOX_IMAGE=generic/ubuntu2004
