refactor(playbooks): fix linting errors and use double quotes where applicable

--- a/playbooks/applications/loki.yml
+++ b/playbooks/applications/loki.yml
@@ -1,11 +1,11 @@
 ---
 - name: loki // Create service directory
   ansible.builtin.file:
-    dest: '{{ f_docker__home }}/{{ item }}'
+    dest: "{{ f_docker__home }}/{{ item }}"
     state: directory
     owner: root
     group: root
-    mode: '0755'
+    mode: "0755"
   loop:
     - loki
     - loki/config
@@ -16,10 +16,10 @@
 - name: loki // Write promtail config
   ansible.builtin.template:
     src: templates/config/promtail.config.yml.j2
-    dest: '{{ f_docker__home }}/loki/config/promtail.yml'
+    dest: "{{ f_docker__home }}/loki/config/promtail.yml"
     owner: root
     group: root
-    mode: '0644'
+    mode: "0644"
   notify: Restart loki
   tags:
     - application
@@ -28,10 +28,10 @@
 - name: loki // Create docker-compose.yml
   ansible.builtin.template:
     src: templates/loki-docker-compose.yml.j2
-    dest: '{{ f_docker__home }}/loki/docker-compose.yml'
+    dest: "{{ f_docker__home }}/loki/docker-compose.yml"
     owner: root
     group: root
-    mode: '0644'
+    mode: "0644"
   tags:
     - application
     - loki
