--- a/playbooks/applications/nextcloud.yml
+++ b/playbooks/applications/nextcloud.yml
@@ -1,11 +1,11 @@
 ---
 - name: nextcloud // Create service directory
   ansible.builtin.file:
-    dest: '{{ f_docker__home }}/nextcloud'
+    dest: "{{ f_docker__home }}/nextcloud"
     state: directory
     owner: root
     group: docker
-    mode: '0755'
+    mode: "0755"
   tags:
     - application
     - nextcloud
@@ -13,19 +13,19 @@
 - name: nextcloud // Create docker-compose.yml
   ansible.builtin.template:
     src: templates/nextcloud-docker-compose.yml.j2
-    dest: '{{ f_docker__home }}/nextcloud/docker-compose.yml'
+    dest: "{{ f_docker__home }}/nextcloud/docker-compose.yml"
     owner: root
     group: docker
-    mode: '0644'
+    mode: "0644"
   tags:
     - application
     - nextcloud
 
 - name: nextcloud // Install cronjob
   ansible.builtin.cron:
-    name: 'nextcloud'
-    job: '/usr/bin/docker exec -i -u www-data nextcloud_app_1 php -f /var/www/html/cron.php'
-    minute: '*/5'
+    name: "nextcloud"
+    job: "/usr/bin/docker exec -i -u www-data nextcloud_app_1 php -f /var/www/html/cron.php"
+    minute: "*/5"
     user: root
     backup: yes
   tags:
