--- a/playbooks/features/docker.yml
+++ b/playbooks/features/docker.yml
@@ -1,14 +1,14 @@
 ---
 - name: docker // Add docker repository key
   ansible.builtin.apt_key:
-    url: '{{ docker_repository_key_url }}'
+    url: "{{ docker_repository_key_url }}"
     state: present
   tags:
     - docker
 
 - name: docker // Add docker repository
   ansible.builtin.apt_repository:
-    repo: '{{ docker_repository }}'
+    repo: "{{ docker_repository }}"
     filename: docker
     state: present
   tags:
@@ -16,7 +16,7 @@
 
 - name: docker // Install docker package
   ansible.builtin.package:
-    name: '{{ docker_package }}'
+    name: "{{ docker_package }}"
     state: present
   tags:
     - docker
@@ -30,17 +30,17 @@
 
 - name: docker // Install docker-compose python package
   ansible.builtin.pip:
-    name: 'docker-compose=={{ f_docker__compose_version }}'
+    name: "docker-compose=={{ f_docker__compose_version }}"
     state: present
   tags:
     - docker
 
 - name: docker // Create docker home
   ansible.builtin.file:
-    dest: '{{ f_docker__home }}'
+    dest: "{{ f_docker__home }}"
     state: directory
     owner: root
     group: docker
-    mode: '0750'
+    mode: "0750"
   tags:
     - docker
