--- a/playbooks/applications/kimai.yml
+++ b/playbooks/applications/kimai.yml
@@ -1,11 +1,11 @@
 ---
 - name: kimai // Create service directory
   ansible.builtin.file:
-    dest: '{{ f_docker__home }}/kimai'
+    dest: "{{ f_docker__home }}/kimai"
     state: directory
     owner: root
     group: docker
-    mode: '0755'
+    mode: "0755"
   tags:
     - application
     - kimai
@@ -13,10 +13,10 @@
 - name: kimai // Create docker-compose.yml
   ansible.builtin.template:
     src: templates/kimai-docker-compose.yml.j2
-    dest: '{{ f_docker__home }}/kimai/docker-compose.yml'
+    dest: "{{ f_docker__home }}/kimai/docker-compose.yml"
     owner: root
     group: docker
-    mode: '0644'
+    mode: "0644"
   tags:
     - application
     - kimai
