--- a/playbooks/features/host_config.yml
+++ b/playbooks/features/host_config.yml
@@ -1,7 +1,7 @@
 ---
 - name: host config // Set hostname
   ansible.builtin.hostname:
-    name: '{{ hostname }}'
+    name: "{{ hostname }}"
   when:
     - hostname | default(false)
   tags:
@@ -11,13 +11,14 @@
   ansible.builtin.file:
     path: /var/cache/ansible
     state: directory
+    mode: "0755"
   tags:
     - host
 
 - name: host config // Install packages
   ansible.builtin.package:
-    name: '{{ item }}'
+    name: "{{ item }}"
     state: present
-  loop: '{{ h_packages | default([]) }}'
+  loop: "{{ h_packages | default([]) }}"
   tags:
     - host
