--- a/playbooks/features/traefik.yml
+++ b/playbooks/features/traefik.yml
@@ -1,11 +1,11 @@
 ---
 - name: traefik // Create service directory
   ansible.builtin.file:
-    dest: '{{ f_docker__home }}/traefik'
+    dest: "{{ f_docker__home }}/traefik"
     state: directory
     owner: root
     group: docker
-    mode: '0755'
+    mode: "0755"
   tags:
     - application
     - traefik
@@ -20,10 +20,10 @@
 - name: traefik // Create docker-compose.yml
   ansible.builtin.template:
     src: templates/traefik-docker-compose.yml.j2
-    dest: '{{ f_docker__home }}/traefik/docker-compose.yml'
+    dest: "{{ f_docker__home }}/traefik/docker-compose.yml"
     owner: root
     group: docker
-    mode: '0644'
+    mode: "0644"
   tags:
     - application
     - traefik
