--- a/playbooks/features/host_git_packages.yml
+++ b/playbooks/features/host_git_packages.yml
@@ -23,11 +23,12 @@
 
 - name: host git packages // Download git release
   ansible.builtin.get_url:
-    url: >
-      "https://github.com/{{ item.user }}/{{ item.repo }}/releases/download/{{ __item_latest_release.tag }}/
-      {{ item.repo }}_{{ __item_latest_release.tag }}_{{ item.arch }}.{{ item.format }}"
+    url: "https://github.com/{{ item.user }}/{{ item.repo }}/releases/download/\
+          {{ __item_latest_release.tag }}/{{ item.repo }}_{{ __item_latest_release.tag }}_{{ item.arch }}.{{ item.format }}"
     dest: "/var/cache/ansible/{{ item.repo }}_{{ __item_latest_release.tag }}_{{ item.arch }}.{{ item.format }}"
     mode: "0644"
+  tags:
+    - host
 
 - name: host git packages // Install git release (apt)
   ansible.builtin.apt:
