--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 ansible_managed = Ansible: {file} modified on %Y-%m-%d %H:%M:%S
 callbacks_enabled = timer, profile_tasks, profile_roles
+roles_path = ~/.ansible/roles:roles
 vault_password_file = ~/.ansible/chronicc-vault-pass
 
 [ssh_connection]
