--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,11 @@
 collections:
   - name: community.docker
     version: 3.3.1
+  - name: community.general
+    version: 7.4.0
 
 roles:
   - name: ctorgalson.nerdfonts
     version: v1.0.1
+  - name: geerlingguy.docker
+    version: 6.2.0
