chore(Vagrant): add debian and fedora hosts

--- a/.envrc
+++ b/.envrc
@@ -7,6 +7,18 @@ export ANSIBLE_CENTOS_7_BOX_IMAGE=generic/centos7
 export ANSIBLE_CENTOS_7_HOSTNAME=centos-7
 export ANSIBLE_CENTOS_8_BOX_IMAGE=generic/centos8
 export ANSIBLE_CENTOS_8_HOSTNAME=centos-8
+export ANSIBLE_DEBIAN_10_BOX_IMAGE=generic/debian10
+export ANSIBLE_DEBIAN_10_HOSTNAME=debian-10
+export ANSIBLE_DEBIAN_11_BOX_IMAGE=generic/debian11
+export ANSIBLE_DEBIAN_11_HOSTNAME=debian-11
+export ANSIBLE_DEBIAN_12_BOX_IMAGE=generic/debian12
+export ANSIBLE_DEBIAN_12_HOSTNAME=debian-12
+export ANSIBLE_FEDORA_36_BOX_IMAGE=generic/fedora36
+export ANSIBLE_FEDORA_36_HOSTNAME=fedora-36
+export ANSIBLE_FEDORA_37_BOX_IMAGE=generic/fedora37
+export ANSIBLE_FEDORA_37_HOSTNAME=fedora-37
+export ANSIBLE_FEDORA_38_BOX_IMAGE=generic/fedora38
+export ANSIBLE_FEDORA_38_HOSTNAME=fedora-38
 export ANSIBLE_HADOOP_BOX_IMAGE=generic/ubuntu2204
 export ANSIBLE_UBUNTU_1804_BOX_IMAGE=generic/ubuntu1804
 export ANSIBLE_UBUNTU_1804_HOSTNAME=ubuntu-1804
